language/move-lang/tests/move_check/parser/function_type_missing_angle.exp
error: 

   ┌── tests/move_check/parser/function_type_missing_angle.move:3:15 ───
   │
 3 │     fn<T1, T2 () { }
   │               ^ Unrecognized Token: (
   ·
 3 │     fn<T1, T2 () { }
   │               - Expected:  ","
   │

